--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,21 +210,21 @@ h6 {
 .nav-menu .active,
 .nav-menu .active:focus,
 .nav-menu li:hover>a {
-  color: #fff;
-  background: #0563bb;
+  color: #45505B;
+  background: #8DD9F0;
 }
 
 .nav-menu a:hover span,
 .nav-menu .active span,
 .nav-menu .active:focus span,
 .nav-menu li:hover>a span {
-  color: #fff;
+  color: #45505B;
 }
 
 .nav-menu a:hover,
 .nav-menu li:hover>a {
   width: 100%;
-  color: #fff;
+  color: #45505B;
 }
 
 .nav-menu a:hover span,
@@ -264,8 +264,8 @@ h6 {
 }
 
 .mobile-nav-active .mobile-nav-toggle {
-  color: #fff;
-  background-color: #0563bb;
+  color: #45505b;
+  background-color: #2372C1;
 }
 
 /*--------------------------------------------------------------
@@ -311,7 +311,7 @@ h6 {
 }
 
 #hero p span {
-  color: #0563bb;
+  color: #2372C1;
   letter-spacing: 1px;
 }
 
