--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Bree Serif', serif;
 }
 
 /*--------------------------------------------------------------
@@ -379,7 +379,6 @@ section {
 .section-title h2 {
   font-size: 32px;
   font-weight: bold;
-  text-transform: uppercase;
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
@@ -1177,7 +1176,7 @@ section {
   font-size: 36px;
   font-weight: 700;
   position: relative;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Bree Serif', serif;
   padding: 0;
   margin: 0 0 15px 0;
 }
